# isaac

apibara_backend/: .env  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apibara_backend/apibara/: configuration.toml
apibara_backend/proto/apibara/application/: application_service.proto
apibara_backend/src/isaac_api/: cli.py  contract.py  indexer.py  main.py
apibara_backend/src/isaac_api/apibara/: __init__.py
apibara_backend/tests/: test_isaac_api.py
client_macro/: package-lock.json  package.json
client_micro_write/: README.md  package-lock.json  package.json
config_helper/abi/: fsm_abi.json  lobby_abi.json  yagi_router_dao_abi.json  yagi_router_lobby_abi.json
config_helper/components/: Addresses.js  Config.js  ConnectWallet.js  DAOContract.js  FsmAngelContract.js  FsmCharterContract.js  FsmSubjectContract.js  LobbyContract.js  UniverseContract.js  View.js  YagiRouterUniverseContract.js
config_helper/pages/: _app.js  index.js
contracts/: macro.cairo  micro.cairo
contracts/libs/: dynamicsmath.cairo  fpmath.cairo
contracts/util/: perlin_noise.cairo
core/: compile.py
core/proxy/: proxy.cairo
core/tests/: test_distribution.py  test_lobby_alpha2.py  test_lobby_mini.py
deploy/: declare.py  declared_isaac.json  deploy_legacy.py  deploy_proxies.py  deployed_isaac.json
docs/: _sidebar.md
docs/eng/: alpha-goals.md  alpha-rules.md  alpha-tutorials.md  universe-micro.md
fountain/: README.md  game_abi.json
fountain/artifacts/: game_abi.json
fountain/contracts/: constants.cairo  game_state_forwarder.cairo  physics_engine.cairo  scene_forwarder.cairo  (+2 more)
isaac/: LICENSE.md  README.md  note_upgrade_tasks.md  server_abi.json
s2m2_apibara_backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
s2m2_apibara_backend/apibara/: configuration.toml
s2m2_apibara_backend/src/isaac_api/: cli.py  contract.py
s2m2_apibara_backend/src/isaac_api/apibara/: __init__.py
s2m2_apibara_backend/src/s2m2_api/: cli.py  contract.py  indexer.py  main.py
s2m2_apibara_backend/tests/: test_s2m2_api.py
stardisc_backend/: Dockerfile  pyproject.toml
tests/: test_perlin_noise.py
working_view/: package-lock.json  package.json
(+301 files in other folders)
