[tool.poetry]
name = "isaac_api"
version = "0.1.0"
description = ""
authors = ["Francesco Ceccon <francesco@ceccon.me>"]

[tool.poetry.scripts]
isaac = "isaac_api.main:cli"

[tool.poetry.dependencies]
python = ">3.7.2,<3.10"
apibara = "^0.4.1"
click = "^8.1.3"
"starknet.py" = "^0.3.4-alpha.0"
pymongo = {extras = ["srv"], version = "^4.1.1"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"