[tool.poetry]
name = "s2m2_api"
version = "0.1.0"
description = ""
authors = ["Francesco Ceccon <francesco@ceccon.me>"]

[tool.poetry.scripts]
s2m2-api = "s2m2_api.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
grpcio = "^1.46.3"
aiochannel = "^1.1.1"
pymongo = {extras = ["srv"], version = "^4.1.1"}
python-dotenv = "^0.20.0"
setuptools = "^62.6.0"
apibara = "^0.2.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.46.3"
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
